# gc9307-async

./: Cargo.toml  README.md  lefthook.yml  setup-code-quality.sh
docs/: 1.47寸IPS初始化GC9307+HSD.txt
examples/stm32g4-direct-spi/: Cargo.toml  README.md
examples/stm32g4-direct-spi/src/: main.rs
examples/stm32g4-rotation-direct-spi/: Cargo.toml  README.md
examples/stm32g4-rotation-direct-spi/.cargo/: config.toml
examples/stm32g4-rotation-direct-spi/src/: main.rs
examples/stm32g4-software-rotation/: Cargo.toml  README.md  memory.x
examples/stm32g4-software-rotation/src/: main.rs
examples/stm32g431/: Cargo.toml  README.md
examples/stm32g431/.cargo/: config.toml
examples/stm32g431/src/: main.rs
src/: lib.rs
