[package]
name = "gc9307-async"
version = "0.1.1"
authors = ["Ivan Li <ivanli2048@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "embedded-hal-driver", "no-std", "gc9307", "graphics"]
description = "GC9307 async driver based on embedded-hal"
repository = "https://github.com/IvanLi-CN/gc9307-async"

[dependencies]
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-hal = "1.0.0"
embedded-graphics-core = "0.4"
maybe-async-cfg = "0.2.5"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 0

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
async = ["dep:embedded-hal-async"]
